<resources>
    <string name="app_name">Teste2</string>
    <string name="nome">Nome:</string>
    <string name="rg">RG:</string>
    <string name="senha">Senha:</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="bt_login">Login</string>
    <string name="bt_cadastro">Cadastrar</string>
    <string name="bt_redefine">Redefinir</string>
    <string name="text_cadastro">Cadastro</string>

    <string name="cadastro_nome">Nome:</string>
    <string name="cadastro_rg">RG:</string>
    <string name="cadastro_senha">Senha:</string>
    <string name="confirmar_senha">Confirmar senha:</string>
    <string name="title_activity_calculadora">calculadora</string>
</resources>