<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormRegistro">

    <View
        android:id="@+id/top_Bg"
        style="@style/top_bg"
        android:background="@drawable/top_bg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="LIEBHERR"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        style="@style/container_logo"
        app:cardCornerRadius="15dp"
        app:cardElevation="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_bg">

            <ImageView
                style="@style/logo"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_registro"
        style="@style/container"
        android:layout_height="450dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="Cadastro"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cadastro_nome"
                style="@style/Edit_text"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/name_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:hint="@string/cadastro_nome"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/cadastro_rg"
                style="@style/Edit_text"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/rg_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:hint="@string/cadastro_rg"
                android:inputType="number"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/cadastro_senha"
                style="@style/Edit_text"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/senha_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:hint="@string/cadastro_senha"
                android:inputType="textPassword"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/cadastro_confirmar_senha"
                style="@style/Edit_text"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/senha_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/black"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:paddingStart="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_cadastrar"
                style="@style/bt_login"
                android:background="@drawable/button_bg"
                android:text="@string/bt_cadastro" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- ProgressBar-->
    <ProgressBar
        android:id="@+id/cadastro_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:indeterminateTint="@color/my_primary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_registro" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>